# FantasyLifeI-ModTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  Mod.json.in  README.md
.github/workflows/: header-update.yml
include/: CommonData.hpp  Export.h  GameCache.hpp  GameData.hpp  MDK.h  Mod.hpp  ModAPI.h  ModCore.hpp  ModLoader.hpp  Offset.h  README.md  SDK.h
include/API/: GameFunctionProxy.hpp  GameObjectProxy.hpp  Language.hpp
include/API/Common/: Common.hpp  CommonElementAttrParam.hpp  CommonItemEffectParam.hpp  CommonItemTableSetting.hpp  CommonPickParamData.hpp  CommonPickParamDataPickParam.hpp  CommonPickStatusParam.hpp  CommonPriceInfo.hpp  CommonSkillParam.hpp
include/API/Engine/: FName.hpp  FString.hpp  TArray.hpp  TMap.hpp
include/API/Entities/: CharaData.hpp  EntityStats.hpp  EntityStatus.hpp
include/API/Entities/Player/: Player.hpp
include/API/Function/Engine/: UObjectGetObjectsOfClass.hpp
include/API/Function/Engine/FMemory/: FMemoryFree.hpp  FMemoryMalloc.hpp
include/API/Function/Engine/FName/: FNameCTor.hpp  FnameToString.hpp
include/API/Function/Engine/UObject/: UObjectFindFunction.hpp  UObjectGetObjectsOfClass.hpp  UObjectProcessEvent.hpp
include/API/Identifier/: ItemIdentifier.hpp  MapIdentifier.hpp  MenuIconIdentifier.hpp  RecipeIdentifier.hpp  SkillIdentifier.hpp
include/API/Item/: ItemArmorData.hpp  ItemConsumeData.hpp  ItemCraftData.hpp  ItemData.hpp  ItemEquipData.hpp  ItemImportantData.hpp  ItemKitData.hpp  ItemLifeToolsData.hpp  ItemMaterialData.hpp  ItemPowerUpData.hpp  ItemUniqueSkillEquipData.hpp  ItemVehicleData.hpp  ItemWeaponData.hpp
include/API/Life/: LifeData.hpp  ULifeData.hpp
include/API/Recipe/: RecipeData.hpp  RecipeDataItemInfo.hpp  RecipeDataLifeParamInfo.hpp  RecipeDataRewardData.hpp
include/API/Skill/: EffectCondition.hpp  SkillData.hpp  SkillEffectInfo.hpp
include/API/Table/: ItemTableDetail.hpp
include/API/World/: MapAttributeInfo.hpp  MapData.hpp  MapDataSubMapData.hpp  MapSubLevel.hpp
include/Engine/: DataTable.hpp  FName.hpp  FUObjectArray.hpp  TMap.hpp  UGameDataAsset.hpp  UObject.hpp
include/Game/: FGDItemData.hpp  UGDSCharaParameter.hpp  UGDSItemRecipeData.hpp  UGDSItemText.hpp  UGDSRecipeData.hpp  UStaticDataManager.hpp
include/Hook/: EventHandler.hpp  MemoryHelper.hpp  Pattern.hpp
include/Loader/: ModAPI.hpp  ModObject.hpp
include/Logger/: Logger.hpp
include/Mod/: ModBase.hpp  ModEnvironnement.hpp  ModObject.hpp  ThreadPool.hpp
include/Mod/Configuration/: ConfigManager.hpp  ConfigValue.hpp  ModConfig.hpp
include/Patcher/: Patch.hpp  Patcher.hpp  Priority.hpp
include/Patcher/Patches/: EventHook.hpp
include/SDK/: ACLPlugin.h  AIModule.h  ActorLayerUtilities.h  ActorSequence.h  AdvancedWidgets.h  AndroidFileServer.h  AndroidPermission.h  AnimationCore.h  AnimationSharing.h  AnimationWarpingRuntime.h  AppleImageUtils.h  ArchVisCharacter.h  AssetRegistry.h  AssetTags.h  AudioAnalyzer.h  AudioCapture.h  AudioExtensions.h  AudioLinkCore.h  AudioLinkEngine.h  AudioPlatformConfiguration.h  AudioSynesthesia.h  AudioWidgets.h  AutomationUtils.h  AvfMediaFactory.h  BasicType.h  BluePrints.h  BuildPatchServices.h  CableComponent.h  Chaos.h  ChaosCaching.h  ChaosCloth.h  ChaosNiagara.h  ChaosSolverEngine.h  CharamakeBoneModify.h  CinematicCamera.h  ClothingSystemRuntimeCommon.h  ClothingSystemRuntimeInterface.h  ClothingSystemRuntimeNv.h  ConsoleVariablesEditorRuntime.h  ControlRig.h  (+159 more)
lib/: ModLoader.lib
resource/: Mod.json
src/: Mod.cpp
